--- a/Code/Analysis/Regression.ipynb
+++ b/Code/Analysis/Regression.ipynb
@@ -354,6 +354,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d905efd-c37d-410e-91fd-2e361dbdf3cc",
+   "metadata": {},
+   "source": [
+    "### Looking at all variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "b57841fd-faf9-4fd7-b50c-e6d0a9ee0a52",
@@ -393,6 +401,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb95456f-d5a7-4c1e-8829-5664ad635ef3",
+   "metadata": {},
+   "source": [
+    "### Changing Variable Types"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "f3480e13-ef0a-4be8-8096-893256b82618",
@@ -410,6 +426,14 @@
    "outputs": [],
    "source": [
     "PIT.FastestLapMilliseconds = PIT.FastestLapMilliseconds.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79fec8b6-5178-49ab-bd82-4fef4a30df46",
+   "metadata": {},
+   "source": [
+    "### Doing a Linear Regression"
    ]
   },
   {
@@ -493,13 +517,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "37730d29-0288-4f2a-bf4f-2322e70bf23d",
+   "cell_type": "markdown",
+   "id": "09f1063a-d5c8-4f78-9f6d-5ee7ff9d9001",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Lowest numbers tell that more likely to be significant P values is less .05"
+    "#### Lowest numbers tell that more likely to be significant P values is less .05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9be06fe9-f14a-42b1-8a4f-09c3fcfd0acc",
+   "metadata": {},
+   "source": [
+    "# Which has more influence over outcome: driving skill or engine type?\n",
+    "### Driving Skill is defined as: grid, stop, and fastest lap speed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3fdd2d0-d8b1-4c0c-bf86-e32557239a7b",
+   "metadata": {},
+   "source": [
+    "### Backwards Elimination Stepwise Regression"
    ]
   },
   {
@@ -560,6 +599,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6eb1f77e-d33c-46b3-a2e1-838056f119d6",
+   "metadata": {},
+   "source": [
+    "### Engine Type has the least significant p value at 0.179.\n",
+    "### We are removing that and rerunning the regression."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "0fef6630-1f03-4c48-b1d7-5274efdc0370",
@@ -616,22 +664,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "26e21210-6b33-4bc4-b82d-584ff912c8e7",
+   "cell_type": "markdown",
+   "id": "353640fb-fee4-4262-82b7-9645450d306b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## these 3 factor are the influencing factors for Driver skills outcome (P value is under .05)"
+    "### Grid position, pit stop times, and fastest lap speed have the most influence.\n",
+    "### Driving Skill has influence over outcome and Engine Type does not."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37779e44-b0a7-4032-98dc-56702b196ec2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
