--- a/Code/Exploration/Plot.ipynb
+++ b/Code/Exploration/Plot.ipynb
@@ -169,6 +169,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d764210a-83b6-428b-ba10-f288421bea69",
+   "metadata": {},
+   "source": [
+    "# Looking at which drivers won the races in the 2021 season."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "029ef7c0-a43c-445f-85a6-688679cae0c5",
@@ -231,6 +239,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1a766e9-01db-452f-9fae-ee82b4ccd153",
+   "metadata": {},
+   "source": [
+    "# Max Verstappen and Lewis Hamilton won the most races."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "50afce68-9d66-42aa-90e0-3805a542f379",
@@ -266,6 +282,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e9e380c-734d-4c36-8f5f-ada160faa017",
+   "metadata": {},
+   "source": [
+    "# Red Bull and Mercedes won the most out of all the companies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "87365fc1-836d-4ed0-90e8-1a4357f9872a",
@@ -291,9 +315,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8bd499d6-e2d6-4a0c-81b5-cf0e47e9ee5f",
+   "metadata": {},
+   "source": [
+    "# The number of races each of these companies won.\n",
+    "## Other companies did not win any races, only 4 teams won all of the races in the season."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8523972e-4e7c-45ee-9269-876bf433c3b2",
+   "id": "85a3aa69-d0ba-466a-8d4b-c6893d3eefe1",
    "metadata": {},
    "outputs": [],
    "source": []
